--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,15 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.1"
+        "pestphp/pest": "^2.6"
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/pest",
         "test-docker": "docker run --rm --volume=\"$(pwd)\"/:/kata --workdir=/kata php:8-cli php vendor/bin/phpunit"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
