--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,14 +10,15 @@
         cacheDirectory=".phpunit.cache"
         beStrictAboutCoverageMetadata="true">
   <testsuites>
-    <testsuite name="default">
-      <directory>tests</directory>
+    <testsuite name="Test Suite">
+      <directory suffix="Should.php">./tests</directory>
+      <directory suffix="Test.php">./tests</directory>
     </testsuite>
   </testsuites>
   <coverage/>
   <source>
     <include>
-      <directory suffix=".php">src</directory>
+      <directory>src</directory>
     </include>
   </source>
 </phpunit>
