--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
             "App\\": "src/"
         }
     },
+    "require": {
+        "php": "^8.3"
+    },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
@@ -15,9 +18,5 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1"
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "test-docker": "docker run --rm --volume=\"$(pwd)\"/:/kata --workdir=/kata php:8-cli php vendor/bin/phpunit"
     }
 }
