--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,4 +38,4 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Run test suite
-      run: composer test
+      run: php vendor/bin/phpunit
