--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd"
-        bootstrap="vendor/autoload.php"
-        executionOrder="depends,defects"
-        beStrictAboutOutputDuringTests="true"
-        failOnRisky="true"
-        failOnWarning="true"
-        cacheDirectory=".phpunit.cache"
-        beStrictAboutCoverageMetadata="true">
-  <testsuites>
-    <testsuite name="Test Suite">
-      <directory suffix="Should.php">./tests</directory>
-      <directory suffix="Test.php">./tests</directory>
-    </testsuite>
-  </testsuites>
-  <coverage/>
-  <source>
-    <include>
-      <directory>src</directory>
-    </include>
-  </source>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+         bootstrap="vendor/autoload.php"
+         cacheDirectory=".phpunit.cache"
+         executionOrder="depends,defects"
+         beStrictAboutCoverageMetadata="true"
+         beStrictAboutOutputDuringTests="true"
+         displayDetailsOnPhpunitDeprecations="true"
+         failOnPhpunitDeprecation="true"
+         failOnRisky="true"
+         failOnWarning="true">
+    <testsuites>
+        <testsuite name="default">
+            <directory suffix="Should.php">tests</directory>
+            <directory suffix="Test.php">tests</directory>
+        </testsuite>
+    </testsuites>
+
+    <source ignoreIndirectDeprecations="true" restrictNotices="true" restrictWarnings="true">
+        <include>
+            <directory>src</directory>
+        </include>
+    </source>
 </phpunit>
